반응형 수정 (로고 width)

--- a/css/style.css
+++ b/css/style.css
@@ -989,6 +989,17 @@ footer p{
     font-size: 15px;
   }
 
+  .container .projects a.ticketN,
+  .container .projects a.ticketN_web,
+  .container .projects a.philips{
+    background-size: 100px auto;
+  }
+
+  .container .projects a.dm,
+  .container .projects a.leaders{
+    background-size: 60px auto;
+  }
+
   .work_box .mainImg.ticketN img{
     width: 150px;
   }
